# pr-reviewer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.toml  install.sh  test_file.txt
docs/: configuration.md  deployment.md  troubleshooting.md
public/: pr-reviewer-style-guide.jsx
src/: auto_fix.rs  config.rs  daemon.rs  issue_triage.rs  main.rs  repo_manager.rs  safety.rs
src/context/: diff_parser.rs  file_reader.rs  gitnexus.rs  mod.rs  retriever.rs
src/github/: client.rs  comments.rs  mod.rs  pr.rs  types.rs
src/harness/: claude_code.rs  codex.rs  mod.rs  opencode.rs  spawn.rs
src/review/: engine.rs  instructions.rs  mod.rs  parser.rs  prompt.rs
src/serve/: dashboard.html  mod.rs
src/store/: db.rs
src/token/: crypto.rs  mod.rs  signet.rs
